<resources>
    <string name="app_name">TAG</string>
    <string name="setTitle">Sair da Conta</string>
    <string name="setMsg">Deseja mesmo sair da conta?</string>
    <string name="setPositiveButton">Confirmar</string>
    <string name="setNegativeButton">Cancelar</string>
    <string name="space_button_cancel">Cancelar</string>
    <string name="space_button_confirm">Confirmar</string>
    <string name="image_background">background_image</string>
    <string name="space_button_update">Alterar Dados</string>
    <string name="space_button_exit">Sair da Conta</string>
    <string name="subtext_name">Nome</string>
    <string name="subtext_cpf">CPF</string>
    <string name="title_info_screen">Meu Perfil</string>
    <string name="divisor_version">Divisor</string>
    <string name="img_version_app">Versao App</string>
    <string name="subtext_version">Versão Aplicativo</string>
    <string name="img_user_app">User_app</string>
    <string name="img_cpf_app">cpf_img</string>
    <string name="title_splashscreen">App Treino</string>
    <string name="subtext_splashscreen">Guilherme Martinello Machado</string>
    <string name="title_login_screen">LOGIN</string>
    <string name="hint_cpf_cnpj">CPF/CNPJ</string>
    <string name="hint_senha">Senha</string>
    <string name="link_forget_password">Esqueci minha senha</string>
    <string name="space_button_login">Entrar</string>
    <string name="space_button_cadastro">Cadastrar-se</string>
    <string name="new_password">Nova senha</string>
    <string name="hint_confirm_remember_password">Confirme a senha</string>
    <string name="button_save_new_password">Salvar</string>
    <string name="back_to_login_screen">Voltar</string>
    <string name="hint_data">Data de nascimento</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_telefone">Telefone</string>
    <string name="botao_proximo">PRÓXIMO</string>
    <string name="img_phone">img_phone</string>
    <string name="img_email">img_email</string>
    <string name="img_data">img_data</string>
    <string name="text_fix_usuario">Usuário</string>
    <string name="titulo_tela_alterar">Alterar dados</string>
    <string name="progress_text">Aguarde</string>
</resources>